--- a/force-app/main/default/layouts/Action_Plan_Template_Version__c-Action Plan Template Version Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Action_Plan_Template_Version__c-Action Plan Template Version Layout.layout-meta.xml
@@ -23,6 +23,10 @@
                 <behavior>Edit</behavior>
                 <field>Inactivation_Datetime__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Is_Action_Plan_Template_Editable__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
