more changes in action plan template

--- a/force-app/main/default/layouts/Action_Plan_Template__c-Action Plan Template Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Action_Plan_Template__c-Action Plan Template Layout.layout-meta.xml
@@ -23,6 +23,10 @@
                 <behavior>Readonly</behavior>
                 <field>Unique_Name__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Current_Version__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
